# open-data

./: .pre-commit-config.yaml  PLAN_simulation.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
historic-Mobi.E-data/: ocpi_20210417.ods  ocpi_20210423.ods  ocpi_20210429.ods  ocpi_20210505.ods  ocpi_20210523.ods  ocpi_20210525.ods  ocpi_20210609.ods  ocpi_20210619.ods  ocpi_20210625.ods  ocpi_20210731.ods  ocpi_20210906.ods  ocpi_20211006.ods  ocpi_20211011.ods  ocpi_20211025.ods  ocpi_20211102.ods  ocpi_20211110.ods  ocpi_20211130.ods  ocpi_20211215.ods  ocpi_20211230.ods  ocpi_20220212.ods  ocpi_20220219.ods  ocpi_20220521.ods  ocpi_20220925.ods  ocpi_20221009.ods  ocpi_20221105.ods  ocpi_20221112.ods  ocpi_20221210.ods  ocpi_20221217.xlsx  ocpi_20221223.ods  ocpi_20230121.ods  ocpi_20230318.ods  ocpi_20230401.ods  ocpi_20230520.ods  ocpi_20230610.ods  ocpi_20230617.ods  ocpi_20230715.ods  ocpi_20230721.ods  ocpi_20230902.ods  ocpi_20231014.ods  ocpi_20231125.ods  (+6 more)
historic-data-mobie/: ocpi_20210409.ods  ocpi_20210420.ods  ocpi_20210514.ods  ocpi_20210601.ods  ocpi_20210702.ods  ocpi_20210717.ods  ocpi_20210805.ods  ocpi_20210816.ods  ocpi_20210915.ods  ocpi_20210924.ods  ocpi_20211119.ods  ocpi_20211229.ods  ocpi_20220115.ods  ocpi_20220226.ods  ocpi_20220424.ods  ocpi_20220513.ods  ocpi_20220729.ods  ocpi_20220910.ods  ocpi_20221022.ods  ocpi_20221126.ods  ocpi_20230429.ods  ocpi_20230708.ods  ocpi_20230930.ods  ocpi_20240323.ods  ocpi_20240330.ods  ocpi_20240413.ods  ocpi_20240517.ods  ocpi_20240524.ods
sim/: __init__.py
(+179 files in other folders)
